se agrega ips al log de captura

--- a/assets/templates/register.html
+++ b/assets/templates/register.html
@@ -14,8 +14,8 @@
         <strong>ID:</strong> {{.Capture.ID}}<br>
         <strong>Name:</strong> {{.Capture.Name}}<br>
         <strong>Capture At:</strong> {{.Capture.CaptureAt}}<br>
-        <strong>Method:</strong> {{.Request.Method}}<br>
-        <strong>URI:</strong> {{.Request.URI}}
+        <strong>Real IP:</strong> {{.Request.RealIP}}<br>
+        <strong>Forwarded IP:</strong> {{.Request.ForwardedIP}}
     </div>
     {{end}}
 </div>
